{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 74,
  "lineage": "c879ae45-4772-a23b-4467-17d3e5eb973b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04056160f0fcaaf17",
            "arn": "arn:aws:ec2:ap-southeast-1:274949445690:instance/i-098fc7d5c84000abd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098fc7d5c84000abd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00b5eff02e2316b98",
            "private_dns": "ip-10-1-1-202.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.202",
            "public_dns": "ec2-47-129-99-213.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.129.99.213",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c678940162996ccb",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0132b91af729e822b",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-flask-microservices",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-flask-microservices",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff309215b3dca08c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.security_groups.aws_security_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:274949445690:security-group/sg-0ff309215b3dca08c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff309215b3dca08c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask microservices (User, Product, Order APIs)",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5003
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend application",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL databases (User, Product, Order)",
                "from_port": 32000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "staging-security-group",
            "name_prefix": "",
            "owner_id": "274949445690",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-security-group",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-security-group",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "timeouts": null,
            "vpc_id": "vpc-049a13a0030d517eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:274949445690:internet-gateway/igw-0b28b9b492a87661e",
            "id": "igw-0b28b9b492a87661e",
            "owner_id": "274949445690",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-igw",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-igw",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "vpc_id": "vpc-049a13a0030d517eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:274949445690:route-table/rtb-0011847b64bb057d5",
            "id": "rtb-0011847b64bb057d5",
            "owner_id": "274949445690",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b28b9b492a87661e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-public-rt",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-public-rt",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "timeouts": null,
            "vpc_id": "vpc-049a13a0030d517eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ab39d788d29a38e",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0011847b64bb057d5",
            "subnet_id": "subnet-0132b91af729e822b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:274949445690:subnet/subnet-0132b91af729e822b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0132b91af729e822b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "274949445690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-public-subnet",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-public-subnet",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "vpc_id": "vpc-049a13a0030d517eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:274949445690:vpc/vpc-049a13a0030d517eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a29633f87afb3098",
            "default_route_table_id": "rtb-0dae0c3e181ea3644",
            "default_security_group_id": "sg-0fa27200941a915c0",
            "dhcp_options_id": "dopt-0c211aa62adf19c53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049a13a0030d517eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dae0c3e181ea3644",
            "owner_id": "274949445690",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-vpc",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "staging-vpc",
              "Owner": "devops-team",
              "Project": "gitops-learning"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}